docs(task) configurar docker files e struturar documentacao readme

--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,11 @@ DB_PASSWORD=123456
 
 # environment DOCKER
 # DB_CONNECTION=pgsql
-# DB_HOST=postgres
-# DB_PORT=5432
-# DB_DATABASE=bdteste
+# DB_HOST=postgres #use esse host para a aplicação
+# DB_HOST_EXT=localhost #use esse host ex. para SGBD externo do app
+# DB_PORT=5432 #use essa porta para a aplicação
+# DB_PORT_EXT=15432 #use essa porta ex. para SGBD externo do app
+# DB_DATABASE=LaravelPipes
 # DB_USERNAME=melqui
 # DB_PASSWORD=123456
 
