--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -9,15 +9,16 @@ on:
       - main
 
 jobs:
+  # 🧪 Job de build e testes da aplicação Laravel
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      # Passo 1: Checar o código
+      # Passo 1: Clona o repositório
       - name: Check out the code
         uses: actions/checkout@v2
 
-      # Passo 2: Configurar PHP
+      # Passo 2: Configura ambiente PHP
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -25,43 +26,65 @@ jobs:
           extensions: mbstring, bcmath, zip, pdo, pdo_sqlite
           coverage: xdebug
 
-      # Passo 3: Instalar dependências do PHP
+      # Passo 3: Instala dependências PHP
       - name: Install PHP dependencies
         run: |
           composer install --no-interaction --prefer-dist
 
-      # Passo 3.1: Setar o arquivo de ambiente para testing
+      # Passo 4: Define ambiente de testes
       - name: Set environment file to testing
         run: |
-          cp .env.testing.example .env      
+          cp .env.testing.example .env
 
-      # Passo 3.2: Instalar dependências do front-end (Node.js, Vite)
-      # NOVO: Configura o Node.js no ambiente do GitHub Actions
+      # Passo 5: Configura Node.js (para Vite)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'  # ou a versão que você está utilizando
+          node-version: '16'
 
-      # NOVO: Instala as dependências do front-end (Vite, etc.)
+      # Passo 6: Instala dependências frontend
       - name: Install front-end dependencies
         run: |
-          npm install  # Isso instalará todas as dependências do Vite (e front-end)
+          npm install
 
-      # Passo 4: Garantir que o banco de dados SQLite exista
+      # Passo 7: Gera arquivos estáticos (Vite)
+      - name: Build front-end assets
+        run: |
+          npm run build
+
+      # Passo 8: Garante existência do SQLite
       - name: Create SQLite database if not exists
         run: |
           touch database/database.sqlite
 
-      # Passo 5: Rodar o Vite para gerar os assets (build front-end)
-      # NOVO: Gera os arquivos estáticos do Vite (como manifest.json)
-      - name: Build front-end assets
-        run: |
-          npm run build  # Isso irá gerar o manifest.json e os arquivos no diretório public/build
-
-      # Passo 6: Rodar as migrações e os testes
+      # Passo 9: Roda migrações e testes
       - name: Run migrations and tests
         run: |
           php artisan key:generate --env=testing
           php update-jwt-secret.php
           php artisan migrate
           php artisan test
+
+  # 📦 Job de build/push da imagem Docker (executado só se os testes passarem)
+  docker_build_and_push:
+    runs-on: ubuntu-latest
+    needs: build  # Executa somente se o job 'build' for bem-sucedido
+
+    steps:
+      # Passo 1: Clona novamente o repositório (obrigatório em jobs separados)
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Passo 2: Loga no Docker Hub com secrets do GitHub
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # Passo 3: Builda a imagem Docker da aplicação
+      - name: Build Docker image
+        run: |
+          docker build -t melquidocker/o-mini-mundo:latest -f dockerfiles/php/Dockerfile .
+
+      # Passo 4: Envia a imagem ao Docker Hub
+      - name: Push Docker image
+        run: |
+          docker push melquidocker/o-mini-mundo:latest
